# 设置工程名称和其他相关信息
project(
	"epp"  # 项目名称
	LANGUAGES CXX # 设置编程语言
)

# ----------------------------------------------------------------------------------------------------
# 编译器相关信息（通用）：
# ----------------------------------------------------------------------------------------------------

# 设置C++版本
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)

# 编译器配置 代码地址无关性 共享库
set(CMAKE_CXX_FLAGS "-fPIC")

# 忽略警告
# add_definitions(-w)


# ----------------------------------------------------------------------------------------------------
# 项目文件相关配置（通用）：
# ----------------------------------------------------------------------------------------------------

# 设置此项目要包含的源文件（递归添加）
file(GLOB_RECURSE EPP_SRC_FILES "./*.cpp")

# 设置头文件包含目录列表，默认包含本目录
set(EPP_INCLUDE_DIRS_LIST .)

# 设置链接库查询目录列表
set(EPP_LINK_DIRS_LIST)

# 设置链接库列表，默认为空
set(EPP_LINK_LIBS_LIST)

# ----------------------------------------------------------------------------------------------------
# 通用目标配置脚本：
# ----------------------------------------------------------------------------------------------------

# 包含模块支持的配置脚本，脚本内包含各个模块的基本配置，调用时需要用到链接的库所在路径作为参数


# ----------------------------------------------------------------------------------------------------
# 具体目标编译脚本：
# ----------------------------------------------------------------------------------------------------

# 包含具体目标编译脚本
include("target_${EPP_TARGET}.cmake")

# ----------------------------------------------------------------------------------------------------
# 项目生成相关配置（通用）：
# ----------------------------------------------------------------------------------------------------

# 生成动态链接库 libepp （默认会链接需要用到的库，但出于简化使用者工作的目的，也可以修改此项为仅编译不链接，以供使用者根据使用环境自行链接，具体用法参阅CMake官方手册）
add_library(
	${PROJECT_NAME} # 要生成的动态链接库名称
	SHARED    # 动态链接
	${EPP_SRC_FILES}    # 源代码集合
)

# 设置头文件包含目录
target_include_directories(
	${PROJECT_NAME} # 项目名称
	PUBLIC
	${EPP_INCLUDE_DIRS_LIST} # 包含头文件目录列表
)

# 设置链接库查询目录列表
target_link_directories(
	${PROJECT_NAME} # 要生成的动态链接库名称
	PUBLIC
	${EPP_LINK_DIRS_LIST} # 链接库查询目录
)

# 链接需要用到的动态库
target_link_libraries(
	${PROJECT_NAME} # 项目名称
	PUBLIC
	${EPP_LINK_LIBS_LIST} # 链接库列表
)